--- a/somausuario.html
+++ b/somausuario.html
@@ -11,8 +11,15 @@
         var num1 = parseInt(prompt("Digite 1 número: "))
         var num2 = parseInt(prompt("Digite 2 número: "))
 
-        var resultado = num1 + num2 
+        var resultado1 = num1 + num2
+        var resultado2 = num1 - num2 
+        var resultado3 = num1 * num2 
+        var resultado4 = num1 / num2 
 
+        alert("O resultado da soma é " + resultado1)
+        alert("O resultado da subtração é " + resultado2)
+        alert("O resultado da multiplicação é " + resultado3)
+        alert("O resultado da divisão é " + resultado4)
         // num1 = parseInt(num1);
         // num2 = parseInt(num2);
     </script>
