--- a/somausuario.html
+++ b/somausuario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soma JS</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <script>
@@ -15,13 +16,25 @@
         var resultado2 = num1 - num2 
         var resultado3 = num1 * num2 
         var resultado4 = num1 / num2 
-
-        alert("O resultado da soma é " + resultado1)
-        alert("O resultado da subtração é " + resultado2)
-        alert("O resultado da multiplicação é " + resultado3)
-        alert("O resultado da divisão é " + resultado4)
         // num1 = parseInt(num1);
         // num2 = parseInt(num2);
     </script>
+    <div class="calc">
+        <button type="button" onclick="alert('O resultado da soma é ' + resultado1)">
+        +
+        </button>
+
+        <button type="button" onclick="alert('O resultado da subtração é ' + resultado2)">
+        -
+        </button>
+
+        <button type="button" onclick="alert('O resultado da multiplicação é ' + resultado3)">
+        *
+        </button>
+        
+        <button type="button" onclick="alert('O resultado da divisão é ' + resultado4)">
+        /
+        </button>
+    </div>
 </body>
 </html>
